# lightweight_block_ciphers

./: .gitconfig  .gitignore  CMakeLists.txt  readme.md  vcpkg.json
cmake/: GoogleTest.cmake
des/: des.c  des.cpp  des.h  des_test.cpp
src/aes/: aes.c  aes.h  aes_test.cpp  readme.md
src/craft/: craft.c  craft.h  craft_test.cpp  readme.md
src/des/: des.c  des.h  des_test.cpp  readme.md
src/lllwbc/: lllwbc.c  lllwbc.h  lllwbc_test.cpp  llwbc.c  llwbc.h  llwbc_test.cpp  readme.md
src/midori/: midori.c  midori.h  midori_test.cpp  readme.md
src/tools/: bit.c  bit.h  tools_test.cpp
